--- a/vercel.json
+++ b/vercel.json
@@ -1,128 +1,118 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "backend/server.js",
-            "use": "@vercel/node",
-            "config": {
-                "nodeVersion": "18.x"
-            }
-        },
-        {
-            "src": "project/**/*.html",
-            "use": "@vercel/static"
-        },
-        {
-            "src": "admin/**/*.html",
-            "use": "@vercel/static"
+      {
+        "src": "backend/server.js",
+        "use": "@vercel/node",
+        "config": {
+          "nodeVersion": "18.x"
         }
+      },
+      {
+        "src": "project/**/*.html",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "admin/**/*.html",
+        "use": "@vercel/static"
+      }
     ],
     "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/backend/server.js",
-            "headers": {
-                "Access-Control-Allow-Origin": "*",
-                "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
-                "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Authorization"
-            }
-        },
-        {
-            "src": "/css/(.*)",
-            "dest": "/css/$1",
-            "headers": {
-                "Cache-Control": "public, max-age=31536000, immutable"
-            }
-        },
-        {
-            "src": "/js/(.*)",
-            "dest": "/js/$1",
-            "headers": {
-                "Cache-Control": "public, max-age=31536000, immutable"
-            }
-        },
-        {
-            "src": "/images/(.*)",
-            "dest": "/project/images/$1",
-            "headers": {
-                "Cache-Control": "public, max-age=31536000, immutable"
-            }
-        },
-        {
-            "src": "/es/about",
-            "dest": "/project/about.html?lang=es"
-        },
-        {
-            "src": "/zh/about",
-            "dest": "/project/about.html?lang=zh"
-        },
-        {
-            "src": "/es/contact",
-            "dest": "/project/contact.html?lang=es"
-        },
-        {
-            "src": "/zh/contact",
-            "dest": "/project/contact.html?lang=zh"
-        },
-        {
-            "src": "/es/estimate",
-            "dest": "/project/estimate.html?lang=es"
-        },
-        {
-            "src": "/zh/estimate",
-            "dest": "/project/estimate.html?lang=zh"
-        },
-        {
-            "src": "/es",
-            "dest": "/project/index.html?lang=es"
-        },
-        {
-            "src": "/zh",
-            "dest": "/project/index.html?lang=zh"
-        },
-        {
-            "src": "/about",
-            "dest": "/project/about.html"
-        },
-        {
-            "src": "/contact",
-            "dest": "/project/contact.html"
-        },
-        {
-            "src": "/estimate",
-            "dest": "/project/estimate.html"
-        },
-        {
-            "src": "/admin/login",
-            "dest": "/admin/login.html"
-        },
-        {
-            "src": "/admin/submissions",
-            "dest": "/admin/submissions.html"
-        },
-        {
-            "src": "/admin/settings",
-            "dest": "/admin/admin-settings.html"
-        },
-        {
-            "src": "/admin/contacts",
-            "dest": "/admin/contacts.html"
-        },
-        {
-            "src": "/admin/estimates",
-            "dest": "/admin/estimates.html"
-        },
-        {
-            "src": "/",
-            "dest": "/project/index.html"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/project/404.html",
-            "status": 404
+      {
+        "src": "/api/(.*)",
+        "dest": "/backend/server.js",
+        "headers": {
+          "Access-Control-Allow-Origin": "*",
+          "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
+          "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Authorization"
         }
+      },
+   
+      {
+        "src": "/css/(.*)",
+        "dest": "/css/$1",
+        "headers": {
+          "Cache-Control": "public, max-age=604800" 
+        }
+      },
+      {
+        "src": "/js/(.*)",
+        "dest": "/js/$1",
+        "headers": {
+          "Cache-Control": "public, max-age=604800"
+        }
+      },
+      {
+        "src": "/images/(.*)",
+        "dest": "/images/$1",
+        "headers": {
+          "Cache-Control": "public, max-age=604800"
+        }
+      },
+  
+      {
+        "src": "/(es|zh)/about",
+        "dest": "/project/about.html?lang=$1"
+      },
+      {
+        "src": "/(es|zh)/contact",
+        "dest": "/project/contact.html?lang=$1"
+      },
+      {
+        "src": "/(es|zh)/estimate",
+        "dest": "/project/estimate.html?lang=$1"
+      },
+      {
+        "src": "/(es|zh)",
+        "dest": "/project/index.html?lang=$1"
+      },
+  
+      {
+        "src": "/about",
+        "dest": "/project/about.html"
+      },
+      {
+        "src": "/contact",
+        "dest": "/project/contact.html"
+      },
+      {
+        "src": "/estimate",
+        "dest": "/project/estimate.html"
+      },
+ 
+      {
+        "src": "/admin/login",
+        "dest": "/admin/login.html"
+      },
+      {
+        "src": "/admin/submissions",
+        "dest": "/admin/submissions.html"
+      },
+      {
+        "src": "/admin/settings",
+        "dest": "/admin/admin-settings.html"
+      },
+      {
+        "src": "/admin/contacts",
+        "dest": "/admin/contacts.html"
+      },
+      {
+        "src": "/admin/estimates",
+        "dest": "/admin/estimates.html"
+      },
+     
+      {
+        "src": "/",
+        "dest": "/project/index.html"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/project/404.html",
+        "status": 404
+      }
     ],
     "github": {
-        "silent": true
+      "silent": true,
+      "enabled": true
     }
-}
+  }
