--- a/vercel.json
+++ b/vercel.json
@@ -9,37 +9,31 @@
         }
       },
       {
-        "src": "project/**/*",
+        "src": "project/**/*.html",
         "use": "@vercel/static"
       },
       {
-        "src": "admin/**/*",
+        "src": "admin/**/*.html",
         "use": "@vercel/static"
       },
       {
-        "src": "css/**/*",
-        "use": "@vercel/static"
-      },
-      {
-        "src": "js/**/*",
-        "use": "@vercel/static"
-      },
-      {
-        "src": "images/**/*",
+        "src": "css/**/*.css",
         "use": "@vercel/static"
       }
     ],
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "/backend/server.js"
+        "dest": "/backend/server.js",
+        "headers": {
+          "Access-Control-Allow-Origin": "*"
+        }
       },
       {
         "src": "/css/(.*)",
         "dest": "/css/$1",
         "headers": {
-          "Cache-Control": "public, max-age=86400",
-          "Content-Type": "text/css"
+          "Cache-Control": "public, max-age=86400"
         }
       },
       {
@@ -49,6 +43,42 @@
       {
         "src": "/images/(.*)",
         "dest": "/images/$1"
+      },
+      {
+        "src": "/about",
+        "dest": "/project/about.html"
+      },
+      {
+        "src": "/contact",
+        "dest": "/project/contact.html"
+      },
+      {
+        "src": "/estimate",
+        "dest": "/project/estimate.html"
+      },
+      {
+        "src": "/admin/login",
+        "dest": "/admin/login.html"
+      },
+      {
+        "src": "/admin/submissions",
+        "dest": "/admin/submissions.html"
+      },
+      {
+        "src": "/admin/settings",
+        "dest": "/admin/admin-settings.html"
+      },
+      {
+        "src": "/admin/contacts",
+        "dest": "/admin/contacts.html"
+      },
+      {
+        "src": "/admin/estimates",
+        "dest": "/admin/estimates.html"
+      },
+      {
+        "src": "/",
+        "dest": "/project/index.html"
       },
       {
         "src": "/(es|zh)/about",
@@ -67,90 +97,13 @@
         "dest": "/project/index.html?lang=$1"
       },
       {
-        "src": "/about",
-        "dest": "/about.html"
-      },
-      {
-        "src": "/contact",
-        "dest": "/contact.html"
-      },
-      {
-        "src": "/estimate",
-        "dest": "/estimate.html"
-      },
-      {
-        "src": "/admin/login",
-        "dest": "/login.html"
-      },
-      {
-        "src": "/admin/submissions",
-        "dest": "/submissions.html"
-      },
-      {
-        "src": "/admin/settings",
-        "dest": "/admin-settings.html"
-      },
-      {
-        "src": "/admin/contacts",
-        "dest": "/contacts.html"
-      },
-      {
-        "src": "/admin/estimates",
-        "dest": "/estimates.html"
-      },
-      {
-        "src": "/",
-        "dest": "/index.html"
-      },
-      {
         "src": "/(.*)",
-        "dest": "/404.html",
+        "dest": "/project/404.html",
         "status": 404
       }
     ],
-    "rewrites": [
-      {
-        "source": "/about.html",
-        "destination": "/project/about.html"
-      },
-      {
-        "source": "/contact.html",
-        "destination": "/project/contact.html"
-      },
-      {
-        "source": "/estimate.html",
-        "destination": "/project/estimate.html"
-      },
-      {
-        "source": "/index.html",
-        "destination": "/project/index.html"
-      },
-      {
-        "source": "/404.html",
-        "destination": "/project/404.html"
-      },
-      {
-        "source": "/login.html",
-        "destination": "/admin/login.html"
-      },
-      {
-        "source": "/submissions.html",
-        "destination": "/admin/submissions.html"
-      },
-      {
-        "source": "/admin-settings.html",
-        "destination": "/admin/admin-settings.html"
-      },
-      {
-        "source": "/contacts.html",
-        "destination": "/admin/contacts.html"
-      },
-      {
-        "source": "/estimates.html",
-        "destination": "/admin/estimates.html"
-      }
-    ],
     "github": {
-      "silent": true
+      "silent": true,
+      "autoJobCancelation": false
     }
   }
