--- a/vercel.json
+++ b/vercel.json
@@ -17,23 +17,28 @@
         "use": "@vercel/static"
       },
       {
-        "src": "css/**/*.css",
+        "src": "css/**/*",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "js/**/*",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "images/**/*",
         "use": "@vercel/static"
       }
     ],
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "/backend/server.js",
-        "headers": {
-          "Access-Control-Allow-Origin": "*"
-        }
+        "dest": "/backend/server.js"
       },
       {
         "src": "/css/(.*)",
         "dest": "/css/$1",
         "headers": {
-          "Cache-Control": "public, max-age=86400"
+          "Cache-Control": "public, max-age=31536000"
         }
       },
       {
@@ -43,42 +48,6 @@
       {
         "src": "/images/(.*)",
         "dest": "/images/$1"
-      },
-      {
-        "src": "/about",
-        "dest": "/project/about.html"
-      },
-      {
-        "src": "/contact",
-        "dest": "/project/contact.html"
-      },
-      {
-        "src": "/estimate",
-        "dest": "/project/estimate.html"
-      },
-      {
-        "src": "/admin/login",
-        "dest": "/admin/login.html"
-      },
-      {
-        "src": "/admin/submissions",
-        "dest": "/admin/submissions.html"
-      },
-      {
-        "src": "/admin/settings",
-        "dest": "/admin/admin-settings.html"
-      },
-      {
-        "src": "/admin/contacts",
-        "dest": "/admin/contacts.html"
-      },
-      {
-        "src": "/admin/estimates",
-        "dest": "/admin/estimates.html"
-      },
-      {
-        "src": "/",
-        "dest": "/project/index.html"
       },
       {
         "src": "/(es|zh)/about",
@@ -95,10 +64,59 @@
       {
         "src": "/(es|zh)",
         "dest": "/project/index.html?lang=$1"
+      },
+      {
+        "src": "/about",
+        "dest": "/project/about.html",
+        "continue": true
+      },
+      {
+        "src": "/contact",
+        "dest": "/project/contact.html",
+        "continue": true
+      },
+      {
+        "src": "/estimate",
+        "dest": "/project/estimate.html",
+        "continue": true
+      },
+      {
+        "src": "/admin/login",
+        "dest": "/admin/login.html",
+        "continue": true
+      },
+      {
+        "src": "/admin/submissions",
+        "dest": "/admin/submissions.html",
+        "continue": true
+      },
+      {
+        "src": "/admin/settings",
+        "dest": "/admin/admin-settings.html",
+        "continue": true
+      },
+      {
+        "src": "/admin/contacts",
+        "dest": "/admin/contacts.html",
+        "continue": true
+      },
+      {
+        "src": "/admin/estimates",
+        "dest": "/admin/estimates.html",
+        "continue": true
+      },
+      {
+        "src": "/",
+        "dest": "/project/index.html"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/project/404.html",
+        "status": 404
       }
     ],
     "github": {
       "silent": true,
-      "autoJobCancelation": false
+      "enabled": true
     }
   }
