--- a/vercel.json
+++ b/vercel.json
@@ -9,37 +9,23 @@
         }
       },
       {
-        "src": "project/**/*.html",
+        "src": "project/**/*",
         "use": "@vercel/static"
       },
       {
-        "src": "admin/**/*.html",
-        "use": "@vercel/static"
-      },
-      {
-        "src": "css/**/*",
-        "use": "@vercel/static"
-      },
-      {
-        "src": "js/**/*",
-        "use": "@vercel/static"
-      },
-      {
-        "src": "images/**/*",
+        "src": "admin/**/*",
         "use": "@vercel/static"
       }
     ],
     "routes": [
+       
       {
         "src": "/api/(.*)",
         "dest": "/backend/server.js"
       },
       {
         "src": "/css/(.*)",
-        "dest": "/css/$1",
-        "headers": {
-          "Cache-Control": "public, max-age=31536000"
-        }
+        "dest": "/css/$1"
       },
       {
         "src": "/js/(.*)",
@@ -48,6 +34,38 @@
       {
         "src": "/images/(.*)",
         "dest": "/images/$1"
+      },
+      {
+        "src": "/admin/login",
+        "dest": "/admin/login.html"
+      },
+      {
+        "src": "/admin/submissions",
+        "dest": "/admin/submissions.html"
+      },
+      {
+        "src": "/admin/settings",
+        "dest": "/admin/admin-settings.html"
+      },
+      {
+        "src": "/admin/contacts",
+        "dest": "/admin/contacts.html"
+      },
+      {
+        "src": "/admin/estimates",
+        "dest": "/admin/estimates.html"
+      },
+      {
+        "src": "/about",
+        "dest": "/project/about.html"
+      },
+      {
+        "src": "/contact",
+        "dest": "/project/contact.html"
+      },
+      {
+        "src": "/estimate",
+        "dest": "/project/estimate.html"
       },
       {
         "src": "/(es|zh)/about",
@@ -64,46 +82,6 @@
       {
         "src": "/(es|zh)",
         "dest": "/project/index.html?lang=$1"
-      },
-      {
-        "src": "/about",
-        "dest": "/project/about.html",
-        "continue": true
-      },
-      {
-        "src": "/contact",
-        "dest": "/project/contact.html",
-        "continue": true
-      },
-      {
-        "src": "/estimate",
-        "dest": "/project/estimate.html",
-        "continue": true
-      },
-      {
-        "src": "/admin/login",
-        "dest": "/admin/login.html",
-        "continue": true
-      },
-      {
-        "src": "/admin/submissions",
-        "dest": "/admin/submissions.html",
-        "continue": true
-      },
-      {
-        "src": "/admin/settings",
-        "dest": "/admin/admin-settings.html",
-        "continue": true
-      },
-      {
-        "src": "/admin/contacts",
-        "dest": "/admin/contacts.html",
-        "continue": true
-      },
-      {
-        "src": "/admin/estimates",
-        "dest": "/admin/estimates.html",
-        "continue": true
       },
       {
         "src": "/",
