--- a/vercel.json
+++ b/vercel.json
@@ -9,39 +9,34 @@
         }
       },
       {
-        "src": "project/**/*",
+        "src": "project/**/*.html",
         "use": "@vercel/static"
       },
       {
-        "src": "admin/**/*",
+        "src": "admin/**/*.html",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "css/**/*.css",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "js/**/*.js",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "images/**/*",
         "use": "@vercel/static"
       }
     ],
     "routes": [
-       
       {
         "src": "/api/(.*)",
         "dest": "/backend/server.js"
       },
       {
-        "src": "/css/(.*)",
-        "dest": "/css/$1"
-      },
-      {
-        "src": "/js/(.*)",
-        "dest": "/js/$1"
-      },
-      {
-        "src": "/images/(.*)",
-        "dest": "/images/$1"
-      },
-      {
         "src": "/admin/login",
         "dest": "/admin/login.html"
-      },
-      {
-        "src": "/admin/submissions",
-        "dest": "/admin/submissions.html"
       },
       {
         "src": "/admin/settings",
@@ -56,6 +51,10 @@
         "dest": "/admin/estimates.html"
       },
       {
+        "src": "/admin/submissions",
+        "dest": "/admin/submissions.html"
+      },
+      {
         "src": "/about",
         "dest": "/project/about.html"
       },
@@ -68,20 +67,19 @@
         "dest": "/project/estimate.html"
       },
       {
-        "src": "/(es|zh)/about",
-        "dest": "/project/about.html?lang=$1"
+        "src": "/css/(.*)",
+        "dest": "/css/$1",
+        "headers": {
+          "Cache-Control": "public, max-age=31536000"
+        }
       },
       {
-        "src": "/(es|zh)/contact",
-        "dest": "/project/contact.html?lang=$1"
+        "src": "/js/(.*)",
+        "dest": "/js/$1"
       },
       {
-        "src": "/(es|zh)/estimate",
-        "dest": "/project/estimate.html?lang=$1"
-      },
-      {
-        "src": "/(es|zh)",
-        "dest": "/project/index.html?lang=$1"
+        "src": "/images/(.*)",
+        "dest": "/images/$1"
       },
       {
         "src": "/",
@@ -95,6 +93,6 @@
     ],
     "github": {
       "silent": true,
-      "enabled": true
+      "autoJobCancelation": false
     }
   }
