--- a/vercel.json
+++ b/vercel.json
@@ -9,19 +9,19 @@
         }
       },
       {
-        "src": "project/**/*.html",
+        "src": "project/**/*",
         "use": "@vercel/static"
       },
       {
-        "src": "admin/**/*.html",
+        "src": "admin/**/*",
         "use": "@vercel/static"
       },
       {
-        "src": "css/**/*.css",
+        "src": "css/**/*",
         "use": "@vercel/static"
       },
       {
-        "src": "js/**/*.js",
+        "src": "js/**/*",
         "use": "@vercel/static"
       },
       {
@@ -30,10 +30,6 @@
       }
     ],
     "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/backend/server.js"
-      },
       {
         "src": "/admin/login",
         "dest": "/admin/login.html"
@@ -70,7 +66,7 @@
         "src": "/css/(.*)",
         "dest": "/css/$1",
         "headers": {
-          "Cache-Control": "public, max-age=31536000"
+          "Cache-Control": "public, max-age=31536000, immutable"
         }
       },
       {
@@ -82,17 +78,17 @@
         "dest": "/images/$1"
       },
       {
-        "src": "/",
-        "dest": "/project/index.html"
+        "src": "/api/(.*)",
+        "dest": "/api/app.js"
       },
       {
-        "src": "/(.*)",
-        "dest": "/project/404.html",
-        "status": 404
+        "src": "/",
+        "dest": "/project/index.html"
       }
     ],
     "github": {
       "silent": true,
-      "autoJobCancelation": false
+      "autoJobCancellation": false
     }
   }
+  
