--- a/vercel.json
+++ b/vercel.json
@@ -46,6 +46,10 @@
     ],
     "routes": [
       {
+        "src": "/api/(.*)",
+        "dest": "/backend/server.js"
+      },
+      {
         "src": "/admin/login",
         "dest": "/admin/login.html"
       },
@@ -79,10 +83,7 @@
       },
       {
         "src": "/css/(.*)",
-        "dest": "/css/$1",
-        "headers": {
-          "Cache-Control": "public, max-age=31536000, immutable"
-        }
+        "dest": "/css/$1"
       },
       {
         "src": "/js/(.*)",
@@ -91,10 +92,6 @@
       {
         "src": "/images/(.*)",
         "dest": "/images/$1"
-      },
-      {
-        "src": "/api/(.*)",
-        "dest": "/backend/server.js"
       },
       {
         "src": "/",
