--- a/vercel.json
+++ b/vercel.json
@@ -34,6 +34,7 @@
         "src": "/api/(.*)",
         "dest": "/backend/server.js"
       },
+      
       {
         "src": "/admin/login.html",
         "dest": "/admin/login.html"
@@ -54,6 +55,7 @@
         "src": "/admin/submissions.html",
         "dest": "/admin/submissions.html"
       },
+      
       {
         "src": "/about.html",
         "dest": "/project/about.html"
@@ -66,18 +68,72 @@
         "src": "/estimate.html",
         "dest": "/project/estimate.html"
       },
+      
       {
         "src": "/css/(.*)",
-        "dest": "/css/$1"
+        "dest": "/css/$1",
+        "headers": {
+          "Cache-Control": "public, max-age=31536000, immutable"
+        }
+      },
+      
+      {
+        "src": "/js/admin-auth.js",
+        "dest": "/js/admin-auth.js"
       },
       {
-        "src": "/js/(.*)",
-        "dest": "/js/$1"
+        "src": "/js/admin-common.js",
+        "dest": "/js/admin-common.js"
       },
+      {
+        "src": "/js/admin-contacts.js",
+        "dest": "/js/admin-contacts.js"
+      },
+      {
+        "src": "/js/admin-estimate-view.js",
+        "dest": "/js/admin-estimate-view.js"
+      },
+      {
+        "src": "/js/admin-estimates.js",
+        "dest": "/js/admin-estimates.js"
+      },
+      {
+        "src": "/js/admin-pages.js",
+        "dest": "/js/admin-pages.js"
+      },
+      {
+        "src": "/js/admin-settings.js",
+        "dest": "/js/admin-settings.js"
+      },
+      {
+        "src": "/js/admin-submissions.js",
+        "dest": "/js/admin-submissions.js"
+      },
+      {
+        "src": "/js/admin.js",
+        "dest": "/js/admin.js"
+      },
+      {
+        "src": "/js/contact.js",
+        "dest": "/js/contact.js"
+      },
+      {
+        "src": "/js/estimate.js",
+        "dest": "/js/estimate.js"
+      },
+      {
+        "src": "/js/main.js",
+        "dest": "/js/main.js"
+      },
+      
       {
         "src": "/images/(.*)",
-        "dest": "/images/$1"
+        "dest": "/images/$1",
+        "headers": {
+          "Cache-Control": "public, max-age=31536000, immutable"
+        }
       },
+      
       {
         "src": "/",
         "dest": "/project/index.html"
