--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
         "src": "backend/server.js",
         "use": "@vercel/node",
         "config": {
+            "includeFiles":[
+                "backend/data/**"
+
+            ],
           "nodeVersion": "18.x"
         }
       },
