--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "vercel-dev": "vercel dev"
     },
     "dependencies": {
+        "@vercel/kv": "^3.0.0",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dkim-signer": "^0.2.0",
