--- a/vercel.json
+++ b/vercel.json
@@ -5,19 +5,14 @@
         "src": "backend/server.js",
         "use": "@vercel/node",
         "config": {
-            "includeFiles":[
-                "backend/data/contacts.json",
-                "backend/data/estimates.json",
-                "backend/utils/**", 
-                "backend/routes/**",
-                "backend/services",
-                "backend/**"
-
-            ],
+          "includeFiles": [
+            "backend/utils/**",
+            "backend/routes/**",
+            "backend/services/**"
+          ],
           "nodeVersion": "18.x"
         }
       },
-  
       {
         "src": "project/**/*",
         "use": "@vercel/static"
@@ -44,109 +39,13 @@
         "src": "/api/(.*)",
         "dest": "/backend/server.js"
       },
-      
       {
-        "src": "/admin/login.html",
-        "dest": "/admin/login.html"
+        "src": "/admin/(.*)",
+        "dest": "/admin/$1"
       },
       {
-        "src": "/admin/settings.html",
-        "dest": "/admin/admin-settings.html"
-      },
-      {
-        "src": "/admin/contacts.html",
-        "dest": "/admin/contacts.html"
-      },
-      {
-        "src": "/admin/estimates.html",
-        "dest": "/admin/estimates.html"
-      },
-      {
-        "src": "/admin/submissions.html",
-        "dest": "/admin/submissions.html"
-      },
-      
-      {
-        "src": "/about.html",
-        "dest": "/project/about.html"
-      },
-      {
-        "src": "/contact.html",
-        "dest": "/project/contact.html"
-      },
-      {
-        "src": "/estimate.html",
-        "dest": "/project/estimate.html"
-      },
-      
-      {
-        "src": "/css/(.*)",
-        "dest": "/css/$1",
-        "headers": {
-          "Cache-Control": "public, max-age=31536000, immutable"
-        }
-      },
-      
-      {
-        "src": "/js/admin-auth.js",
-        "dest": "/js/admin-auth.js"
-      },
-      {
-        "src": "/js/admin-common.js",
-        "dest": "/js/admin-common.js"
-      },
-      {
-        "src": "/js/admin-contacts.js",
-        "dest": "/js/admin-contacts.js"
-      },
-      {
-        "src": "/js/admin-estimate-view.js",
-        "dest": "/js/admin-estimate-view.js"
-      },
-      {
-        "src": "/js/admin-estimates.js",
-        "dest": "/js/admin-estimates.js"
-      },
-      {
-        "src": "/js/admin-pages.js",
-        "dest": "/js/admin-pages.js"
-      },
-      {
-        "src": "/js/admin-settings.js",
-        "dest": "/js/admin-settings.js"
-      },
-      {
-        "src": "/js/admin-submissions.js",
-        "dest": "/js/admin-submissions.js"
-      },
-      {
-        "src": "/js/admin.js",
-        "dest": "/js/admin.js"
-      },
-      {
-        "src": "/js/contact.js",
-        "dest": "/js/contact.js"
-      },
-      {
-        "src": "/js/estimate.js",
-        "dest": "/js/estimate.js"
-      },
-      {
-        "src": "/js/main.js",
-        "dest": "/js/main.js"
-      },
-      
-      {
-        "src": "/images/(.*)",
-        "dest": "/images/$1",
-        "headers": {
-          "Cache-Control": "public, max-age=31536000, immutable"
-        }
-      },
-      
-      {
-        "src": "/",
-        "dest": "/project/index.html"
+        "src": "/(.*)",
+        "dest": "/project/$1"
       }
     ],
     "github": {
@@ -154,4 +53,3 @@
       "autoJobCancellation": false
     }
   }
-  
