--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.10.0",
         "pdf-lib": "^1.17.1",
-        "@supabase/supabase-js": "^2.0.0"
+        "@supabase/supabase-js": "^2.0.0",
+        "body-parser": "^1.20.2"
     },
     "description": "",
     "main": "server.js",
