--- a/vercel.json
+++ b/vercel.json
@@ -73,7 +73,13 @@
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable"
       }
+    },
+    {
+      "src": "/api/.*",
+      "dest": "/backend/server.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     }
+   
   ],
   "github": {
     "silent": true,
