--- a/vercel.json
+++ b/vercel.json
@@ -6,27 +6,28 @@
       "use": "@vercel/node",
       "config": {
         "includeFiles": [
-          "backend/**/*",  
-          "api/**/*",    
-          "data/**/*"     
+          "backend/**/*",
+          "api/**/*",
+          "data/**/*",
+          "node_modules/**/*"
         ],
         "nodeVersion": "18.x"
       }
     },
     {
-      "src": "admin/**/*",
+      "src": "admin/**/*.html",
       "use": "@vercel/static"
     },
     {
-      "src": "project/**/*",
+      "src": "project/**/*.html",
       "use": "@vercel/static"
     },
     {
-      "src": "css/**/*",
+      "src": "css/**/*.css",
       "use": "@vercel/static"
     },
     {
-      "src": "js/**/*",
+      "src": "js/**/*.js",
       "use": "@vercel/static"
     },
     {
@@ -36,8 +37,11 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/backend/server.js"
+      "src": "/admin$",
+      "dest": "/admin/index.html",
+      "headers": {
+        "Cache-Control": "no-cache, no-store, must-revalidate"
+      }
     },
     {
       "src": "/admin/(.*)",
@@ -47,11 +51,9 @@
       }
     },
     {
-      "src": "/(.*)",
-      "dest": "/project/$1",
-      "headers": {
-        "Cache-Control": "public, max-age=3600"
-      }
+      "src": "/api/(.*)",
+      "dest": "/backend/server.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     },
     {
       "src": "/css/(.*)",
@@ -75,15 +77,16 @@
       }
     },
     {
-      "src": "/api/.*",
-      "dest": "/backend/server.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+      "src": "/(.*)",
+      "dest": "/project/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=3600"
+      }
     }
-   
   ],
   "github": {
     "silent": true,
-    "autoJobCancellation": false
+    "autoJobCancellation": true
   },
   "env": {
     "NODE_ENV": "production"
